SFUSA/force-app/main/default/objects/SAPAuthProvider__mdt/fields/Access_Token_URL__c.field-meta.xml
<CustomField>
        <fullName>Access_Token_URL__c</fullName>
        <label>Access Token URL</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>