SFUSA/force-app/main/default/objects/SAPAuthProvider__mdt/fields/Authorization_URL__c.field-meta.xml
<CustomField>
        <fullName>Authorization_URL__c</fullName>
        <label>Authorization URL</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>