SFUSA/force-app/main/default/objects/SAPAuthProvider__mdt/fields/Client_Secret__c.field-meta.xml
<CustomField>
        <fullName>Client_Secret__c</fullName>
        <label>Client Secret</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>