SFUSA/force-app/main/default/objects/SAPAuthProvider__mdt/fields/Redirect_URI__c.field-meta.xml
<CustomField>
        <fullName>Redirect_URI__c</fullName>
        <label>Redirect URI</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>