SFUSA/force-app/main/default/objects/SAPAuthProvider__mdt/fields/Scope__c.field-meta.xml
<CustomField>
        <fullName>Scope__c</fullName>
        <label>Scope</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>